# cti-attack-mapper

./: .env.example  .gitignore  README.md  pyproject.toml
eval/: results.md  run_eval.py
eval/predictions/: report_1_pred.json  report_2_pred.json  report_3_pred.json
eval/reports/: README.md  report_1.txt  report_1_truth.json  report_2.txt  report_2_truth.json  report_3_truth.json  report_4.txt
src/: agent.py  attack_loader.py  extractor.py  tools.py
