[project]
name = "cti-attack-mapper"
version = "0.1.0"
description = "LLM agent that extracts MITRE ATT&CK techniques from CTI reports via RAG."
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "langchain-groq>=1.1.2",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
